--- a/public/style.css
+++ b/public/style.css
@@ -22,3 +22,17 @@
 	display: inline-block;
 	margin: 0px 15px 0px 15px;
 }
+
+.guest-player-container {
+	position: absolute;
+	bottom: 1vh;
+	width: 98vw;
+	background: white;
+	display: block;
+}
+
+.song-list-container {
+	max-height: calc(100vh - 240px);
+	overflow: scroll;
+}
+
