--- a/app/assets/stylesheets/legacy.scss
+++ b/app/assets/stylesheets/legacy.scss
@@ -4,9 +4,15 @@
 }
 
 .login-btn {
-	width: 300px;
+	width: 50vw;
+	height: 10vh;
 	margin: 0 auto;
 	margin-bottom: 100px;
+	font-size: 64px;
+}
+
+#login-title {
+	font-size: 80px;
 }
 
 .signup-field {
