--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -3,9 +3,14 @@
   text-align: center; }
 
 .login-btn {
-  width: 300px;
+  width: 50vw;
+  height: 10vh;
   margin: 0 auto;
-  margin-bottom: 100px; }
+  margin-bottom: 100px;
+  font-size: 64px; }
+
+#login-title {
+  font-size: 80px; }
 
 .signup-field {
   margin: 0 auto; }
