--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,6 @@
+body {
+  margin: 0; }
+
 .login-btn-container {
   margin-bottom: 8vh; }
 
@@ -28,3 +31,11 @@
 .song-list-container {
   max-height: calc(100vh - 240px);
   overflow: scroll; }
+
+.party-header {
+  text-align: center;
+  font-family: Roboto;
+  background: rgba(0, 100, 100, 0.1);
+  margin: 0;
+  padding: 10px;
+  box-shadow: 0px 3px 5px #888888; }
