--- a/app/assets/stylesheets/legacy.scss
+++ b/app/assets/stylesheets/legacy.scss
@@ -40,11 +40,16 @@ body {
 	overflow: scroll;
 }
 
+/*-------------Parties-------------*/
+
 .party-header {
-	text-align: center;
 	font-family: Roboto;
-	background: rgba(0,100,100,0.1);
+	background: linear-gradient(to right, rgba(0,100,100,0.15), white);
 	margin: 0;
 	padding: 10px;
 	box-shadow: 0px 3px 5px #888888;
+}
+
+.party-btn {
+	margin-bottom: 10px;
 }
