--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -32,10 +32,13 @@ body {
   max-height: calc(100vh - 240px);
   overflow: scroll; }
 
+/*-------------Parties-------------*/
 .party-header {
-  text-align: center;
   font-family: Roboto;
-  background: rgba(0, 100, 100, 0.1);
+  background: linear-gradient(to right, rgba(0, 100, 100, 0.15), white);
   margin: 0;
   padding: 10px;
   box-shadow: 0px 3px 5px #888888; }
+
+.party-btn {
+  margin-bottom: 10px; }
