player style progress

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -13,18 +13,23 @@
   margin-bottom: 5vh;
   width: 100%; }
 
-.guest-player-text {
-  font-family: Roboto;
-  display: inline-block;
-  margin: 0px 15px 0px 15px; }
-
-.guest-player-container {
-  position: absolute;
-  bottom: 1vh;
-  width: 98vw;
-  background: white;
-  display: block; }
-
 .song-list-container {
   max-height: calc(100vh - 240px);
   overflow: scroll; }
+
+.both-player-container {
+  position: absolute;
+  bottom: 0;
+  width: 100vw;
+  background: white;
+  display: block;
+  border: solid 1px; }
+
+#host-track-title {
+  font-family: Roboto; }
+
+#host-track-user {
+  font-family: Roboto; }
+
+#main-grid {
+  width: 100vw; }
