--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -43,7 +43,9 @@ body {
   text-align: center; }
 
 .party-btn {
-  margin-bottom: 10px; }
+  margin-bottom: 10px;
+  position: relative;
+  left: 25%; }
 
 .party-container {
   background: #dae2df;
