--- a/app/assets/stylesheets/player.scss
+++ b/app/assets/stylesheets/player.scss
@@ -21,10 +21,15 @@
   border: solid 1px;
 }
 
-#host-track-title {
+#host-player {
   font-family: Roboto;
+  font-size: 1em;
 }
 
-#host-track-user {
-  font-family: Roboto;
+#loading-player {
+  font-size: 100px;
+}
+
+#player-buttons {
+  float: right;
 }
