fixed font sizing

--- a/app/assets/main/main.scss
+++ b/app/assets/main/main.scss
@@ -2,3 +2,4 @@
 @import '../stylesheets/navbar.scss';
 @import '../stylesheets/player.scss';
 @import '../stylesheets/mainComponent.scss';
+@import '../stylesheets/parties.scss';
