--- a/app/assets/stylesheets/parties.scss
+++ b/app/assets/stylesheets/parties.scss
@@ -19,4 +19,18 @@
 .party-container {
 	background: #dae2df;
 	min-height: 100vh;
+	font-size: 40px;
+}
+
+.party-btn-mod {
+	min-width: 50%;
+    margin: 1em;
+    height: 70px;
+	position: relative;
+	left: 21%;
+	background-color: #7aa095;
+	font-size: 40px;
+	color: #ffffff;
+	border-radius: 10px;
+	box-shadow: 0px 0.1em 0.2em #888888;
 }
