--- a/app/assets/stylesheets/navbar.scss
+++ b/app/assets/stylesheets/navbar.scss
@@ -2,21 +2,24 @@
 	background-color: #ec4616;
 	height: 7vh;
 	min-height: 80px;
-	font-size: 90px;
 
 	h2 {
 		font-family: Montserrat;
 		margin: 0;
 		color: #363836;
-		font-size: 1.2em;
+		font-size: 4em;
 	}
 
 	icon {
 		color: #363836;
 	}
 
-	.navbar-icon {
+	.navbar-icon-container {
 		margin: 0 auto;
+
+		icon {
+			padding-left: .15em;
+		}
 	}
 
 	.navbar-col {
