--- a/app/assets/main/main.scss
+++ b/app/assets/main/main.scss
@@ -3,3 +3,4 @@
 @import '../stylesheets/player.scss';
 @import '../stylesheets/mainComponent.scss';
 @import '../stylesheets/parties.scss';
+@import '../stylesheets/djs.scss'
