--- a/app/assets/stylesheets/parties.scss
+++ b/app/assets/stylesheets/parties.scss
@@ -1,5 +1,5 @@
 .party-header {
-	font-size: 2.5em;
+	font-size: 2em;
 	font-family: Roboto;
 	color: #ffffff;
 	background: rgba(54, 56, 54, 1);
@@ -13,10 +13,14 @@
 .party-btn {
 	margin-bottom: 10px;
 	position: relative;
-	left: 21%;
+	left: 25%;
 }
 
 .party-container {
 	background: #dae2df;
 	min-height: 100vh;
+}
+
+.party-nested-item {
+	background: red;
 }
