heat gradient rendering

--- a/app/assets/stylesheets/topTen.scss
+++ b/app/assets/stylesheets/topTen.scss
@@ -1,12 +1,15 @@
 .top-ten-song {
 	font-family: Roboto;
+	padding: 1em;
 
 	h3 {
 		margin: 0;
+		font-size: 1em;
 	}
-	
+
 	h4 {
 		margin: 0;
+		font-size: 0.8em;
 	}
 }
 
