--- a/app/assets/main/main.scss
+++ b/app/assets/main/main.scss
@@ -5,3 +5,4 @@
 @import '../stylesheets/parties.scss';
 @import '../stylesheets/djs.scss';
 @import '../stylesheets/topTen.scss';
+@import '../stylesheets/login.scss';
