login styled with weJay orange gradient

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -11,8 +11,10 @@
 }
 
 #login-title {
-	font-size: 9em;
-	font-family: Montserret;
+	font-size: 6em;
+	font-family: Montserrat;
 	text-align: center;
-  font-style: oblique;
+  color: white;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
