dj name rendering on list

--- a/app/assets/stylesheets/topTen.scss
+++ b/app/assets/stylesheets/topTen.scss
@@ -21,3 +21,11 @@
 .top-ten-rank {
 	justify-content: center
 }
+
+.top-ten-dj {
+	h4 {
+		margin: 0;
+		padding-top: 0.4em;
+		font-style: italic;
+	}
+}
