msg when no songs and bug fixes

--- a/app/assets/main/main.scss
+++ b/app/assets/main/main.scss
@@ -6,3 +6,4 @@
 @import '../stylesheets/djs.scss';
 @import '../stylesheets/topTen.scss';
 @import '../stylesheets/login.scss';
+@import '../stylesheets/mySongs.scss';
