styled as list items

--- a/app/assets/stylesheets/mySongs.scss
+++ b/app/assets/stylesheets/mySongs.scss
@@ -9,3 +9,13 @@
 	align-items: center;
 	justify-content: center;
 }
+
+.mysongs-divider {
+	margin: 0;
+	font-family: Montserrat;
+	text-align: center
+}
+
+.mysongs-divider-mid {
+	padding-top: 10px;
+}
