signup removed, diabled mobile zoom

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -10,6 +10,10 @@
 	margin-bottom: 8vh;
 }
 
+.login-btn-container-top {
+  margin-top: 10vh;
+}
+
 #login-title {
 	font-size: 6em;
 	font-family: Montserrat;
