--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -4,6 +4,7 @@
     background: -o-linear-gradient(#ec4616, white); /* For Opera 11.1 to 12.0 */
     background: -moz-linear-gradient(#ec4616, white); /* For Firefox 3.6 to 15 */
     background: linear-gradient(#ec4616, white); /* Standard syntax */
+    padding-top: 0;
 }
 
 .login-btn-container {
