--- a/app/assets/main/main.scss
+++ b/app/assets/main/main.scss
@@ -1,5 +1,4 @@
 
-@import '../stylesheets/legacy.scss';
 @import '../stylesheets/navbar.scss';
 @import '../stylesheets/player.scss';
 @import '../stylesheets/mainComponent.scss';
@@ -8,3 +7,4 @@
 @import '../stylesheets/topTen.scss';
 @import '../stylesheets/login.scss';
 @import '../stylesheets/mySongs.scss';
+@import '../stylesheets/search.scss';
